--- a/libWriting/build.gradle
+++ b/libWriting/build.gradle
@@ -5,8 +5,9 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'maven-publish'
 }
-
+group='com.libwriting'
 android {
     compileSdkVersion Versions.compileSdkVersion
     buildToolsVersion Versions.buildToolsVersion
@@ -27,11 +28,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
         viewBinding true
@@ -59,4 +60,31 @@ dependencies {
     testImplementation Libs.junit
     androidTestImplementation Libs.AndroidX.Test.Ext.junit
     androidTestImplementation Libs.AndroidX.Test.espressoCore
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.libwriting"
+                artifactId = "libWriting"
+                version = "1.0.0"
+            }
+        }
+    }
+}
+publishing {
+    publications{
+        maven(MavenPublication) {
+            groupId="com.libwriting"
+            artifactId="libWriting"
+            version="1.0.0"
+        }
+    }
+    repositories {
+        maven {
+            url='file://D:/dening_project/outSourcing_proj/maven-repo/'
+        }
+    }
 }
